[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "pyseto"
version = "1.8.4"
description = "A Python implementation of PASETO/PASERK."
authors = ["Ajitomi Daisuke <dajiaji@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/dajiaji/pyseto"

include = [
  "CHANGES.rst",
  "docs",
  "poetry.lock",
  "tests",
  "tox.ini",
]

exclude = [
  "docs/_build",
]

[tool.poetry.dependencies]
python = ">=3.9.2,<4.0"
cryptography = ">=42.0.1,<46"
pycryptodomex = ">=3.18.0"
iso8601 = ">=1.0.2,<3.0.0"
argon2-cffi = ">=23.1.0"

[tool.poetry.group.dev]
optional = true

[tool.poetry.group.dev.dependencies]
pytest = "^8.3.5"
pytest-cov = "^6.0.0"
tox = "^4.24.2"
pre-commit = "^4.1.0"
freezegun = "^1.5.1"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
sphinx = ">=7.1,<8.0.0"
sphinx-rtd-theme = "^3.0.2"
sphinx-autodoc-typehints = ">=2.3.0,<3.0.0"
