[build-system]
requires = ["uv_build>=0.9.7,<1"]
build-backend = "uv_build"

[project]
name = "pyseto"
version = "1.9.1"
description = "A Python implementation of PASETO/PASERK."
readme = "README.md"
requires-python = ">=3.10,<4.0"
authors = [{ name = "Ajitomi Daisuke", email = "dajiaji@gmail.com" }]
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Typing :: Typed",
]
dependencies = [
    "argon2-cffi>=23.1.0",
    "cryptography>=42.0.1,<47",
    "iso8601>=1.0.2,<3.0.0",
    "pycryptodomex>=3.18.0",
]

[project.urls]
Repository = "https://github.com/dajiaji/pyseto"

[tool.uv.build-backend]
module-name = "pyseto"
module-root = ""
source-include = [
    "tests/**",
    "docs/**",
]
source-exclude = [
    "docs/_build/**",
]

[dependency-groups]
dev = [
    "freezegun>=1.5.5",
    "pip-licenses>=5.0.0",
    "pre-commit>=4.5.1",
    "pytest>=9.0.2",
    "pytest-cov>=7.0.0",
    "ruff>=0.14.10",
]
docs = [
    "docutils>=0.21.2",
    "sphinx>=8.1.3,<8.2.0",
    "sphinx-autodoc-typehints>=3.0.1",
    "sphinx-rtd-theme>=3.0.2",
]

[tool.ruff]
target-version = "py310"
line-length = 128  # Match black configuration used by pre-commit hooks.
exclude = []

[tool.ruff.format]
line-ending = "auto"
indent-style = "space"
quote-style = "double"
skip-magic-trailing-comma = false
docstring-code-format = true  # Mirrors blacken-docs formatting of fenced blocks.
docstring-code-line-length = 128

[tool.ruff.lint]
# Match the flake8 + flake8-bugbear setup from .pre-commit-config.yaml by enabling
# E/F/W plus B codes, and extend with Ruff's built-in equivalents for the
# plugins we already run (flake8-comprehensions, pyupgrade, flake8-unused-arguments,
# flake8-simplify, isort, debug-statements) per docs.astral.sh/ruff/rules/.
select = [
    "B",
    "E",
    "F",
    "I",
    "S",
    "W",
    "ARG",
    "C4",
    "SIM",
    "T10",
    "UP",
]
ignore = ["E203", "E501"]
per-file-ignores = { "tests/**" = ["S101", "S106"] }

[tool.ruff.lint.isort]
known-first-party = ["pyseto", "tests"]

[tool.mypy]
python_version = "3.10"
strict = true
# warn_return_any = true
# no_implicit_optional = true
# strict_equality = true
# warn_unused_ignores = true
# disallow_any_generics = true
disallow_any_unimported = true
warn_unreachable = true
ignore_missing_imports = false
pretty = true

# Ignore type errors in tests; they are covered by runtime pytest runs instead.
[[tool.mypy.overrides]]
module = ["tests.*"]
ignore_errors = true

# Ignore missing imports for external libraries that don't have type stubs
# or have incomplete type information in pre-commit environment
[[tool.mypy.overrides]]
module = [
    "iso8601.*",
    "argon2.*",
    "Cryptodome.*",
]
ignore_missing_imports = true

# include = [
#   "CHANGES.rst",
#   "docs",
#   "poetry.lock",
#   "tests",
#   "tox.ini",
# ]
#
# exclude = [
#   "docs/_build",
# ]
#
# [tool.poetry.dependencies]
# python = ">=3.10,<4.0"
# cryptography = ">=42.0.1,<47"
# pycryptodomex = ">=3.18.0"
# iso8601 = ">=1.0.2,<3.0.0"
# argon2-cffi = ">=23.1.0"
#
# [tool.poetry.group.dev]
# optional = true
#
# [tool.poetry.group.dev.dependencies]
# pytest = "^8.3.5"
# pytest-cov = ">=6,<8"
# tox = "^4.24.2"
# pre-commit = "^4.1.0"
# freezegun = "^1.5.1"
#
# [tool.poetry.group.docs]
# optional = true
#
# [tool.poetry.group.docs.dependencies]
# sphinx = ">=7.1,<8.0.0"
# sphinx-rtd-theme = "^3.0.2"
# sphinx-autodoc-typehints = ">=2.3.0,<3.0.0"
