[metadata]
name = pyseto
version = attr: pyseto.__version__
author = AJITOMI Daisuke
author_email = ajitomi@gmail.com
description = A Python implementation of PASETO (Platfrom-Agnostic Security Tokens).
long_description = file: README.md
long_description_content_type = text/markdown
license = MIT
keywords = paseto paserk jwt jose security token cryptography
url = https://github.com/dajiaji/pyseto
classifiers =
    Development Status :: 5 - Production/Stable
    Intended Audience :: Developers
    Natural Language :: English
    License :: OSI Approved :: MIT License
    Topic :: Utilities
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9

[options]
zip_safe = false
include_package_data = true
python_requires = >=3.6
packages = find:
install_requires =
    cryptography>=3.3.1
    pycryptodomex>=3.9.0

[options.package_data]
* = py.typed

[options.extras_require]
docs =
    sphinx
    sphinx-rtd-theme
    sphinx-autodoc-typehints >= 1.2.0
tests =
    pytest>=6.0.0
    pytest-cov>=2.0
    coverage[toml]==5.0.4
dev =
    sphinx
    sphinx-rtd-theme
    pytest>=6.0.0,<7.0.0
    coverage[toml]==5.0.4
    mypy

[options.packages.find]
exclude =
    tests
    tests.*

[flake8]
extend-ignore = E203, E501

[mypy]
python_version = 3.6
ignore_missing_imports = true
warn_unused_ignores = true
